# gReg3D

./: CMakeLists.txt
GDelaunay/GDelaunay/: GDelHost.cu  GDelaunay.h
GDelaunay/Main/: EdgesWeightedDelaunay3D.cpp
GDelaunay/PBA/: pba3DHost.cu  pba3DKernel.h
